# Jarvis-Multiagent

./: Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  vsconfig.vsconfig
capabilities/: default.json
src/: App.module.css  App.tsx  errors.rs  index.css  lib.rs  main.rs  memory.rs  state.rs
src/agent/: llm.rs  mod.rs
src/commands/: agent_ctrl.rs  chat.rs  memory.rs  mod.rs  process.rs  settings.rs
src/components/agent/: AgentPanel.module.css  AgentPanel.tsx
src/components/chat/: ChatView.module.css  ChatView.tsx  InputBar.module.css  InputBar.tsx  MessageBubble.module.css  MessageBubble.tsx
src/components/layout/: Sidebar.module.css  Sidebar.tsx  TitleBar.module.css  TitleBar.tsx
src/components/settings/: SettingsModal.module.css  SettingsModal.tsx
src/db/: mod.rs  models.rs
src/hooks/: useChat.ts
src/lib/: events.ts  ipc.ts
src/store/: useAppStore.ts
src/tools/: fs_tools.rs  mod.rs  shell_tools.rs
src/types/: index.ts
